--- a/admin/admin.html
+++ b/admin/admin.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     
-
-
+    <div class="contain">
+        <button id="delete" class="form-btn">Delete</button>
+        <button id="sub-id" class="form-btn">Submit</button>
+    <input id="in" class="input">
+    <input id="in" class="input">
+    <input id="in" class="input">
+    </div>
 
 
 
